@@ -1,4 +1,10 @@
 # Minesweeper
 The famous little game: Minesweeper
-# This game is still under construction!
-Do bit of the work every day!
+# How to play
+Open a terminal and type 
+
+ *java --module-path PATH\TO\THIS\FOLDER\javafx-sdk-14.0.2.1\lib --add-modules=javafx.controls,javafx.fxml,javafx.media -jar Minesweeper.jar*
+ 
+ then hit enter. The gui of the game should then appear.
+# Instruction
+Enter two numbers from 1-99 (inclusive) which represent width and height. Also enter the number of bombs. It should be larger than 1 and smaller than the total number of tiles.
